# rs-sync-jen-notifier

./: .env  .env.example  Cargo.toml  README.md  config.json
src/: dto.rs  handlers.rs  http.rs  lib.rs  main.rs  utils.rs
src/config/: env.rs
