[package]
name = "rs-sync-jen-notifier"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
config = "0.11"
dotenv = "0.15"
reqwest = "0.11.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
